# vh-detection-agentic

./: .gitignore  MCP_MIGRATION.md  MCP_MIGRATION_SUMMARY.md  README.md  mcp_config.json
src/: .env.example  README.md  main_mcp.py  pyproject.toml  requirements.txt  simple_mcp_demo.py  simple_vehicle_test.py
src/core/: settings.py
src/dto/: __init__.py  agent_response.py  agent_state.py
src/llm/: __init__.py  agent.py  prompt_manager.py
src/llm/client/: client.py  llm_client.py
src/llm/prompts/: review_image.j2  vehicle_type.j2  verify_image.j2
src/mcp/: mcp_agent.py  vehicle_detection_server.py
src/mcp/images/: README.md
src/utils/: utils.py
src/vehicle_mcp/: __init__.py  mcp_agent.py
src/vehicle_mcp/images/: mcp_architecture_diagram.md  mcp_sequence_diagram.md  mcp_workflow_patterns.md
