[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.6",
    "langchain-openai==0.3.8",
    "langgraph==0.2.73",
    "pillow>=11.3.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "mcp>=1.0.0",
]
